<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".activities.MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_weight"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:textSize="15sp"
        android:textColor="@color/colorTextTitle"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/editext_weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_below="@id/textView"
        android:hint="@string/edittext_weight"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_height"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:textSize="15sp"
        android:textColor="@color/colorTextTitle"
        android:layout_below="@id/editext_weight"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/editext_height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:hint="@string/edittext_height"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/bntCalcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:text="@string/bnt_calcular"
        android:layout_marginBottom="30dp"/>


</RelativeLayout>